Set banner min-height to prevent overflow on very small screens

--- a/wp-content/themes/david-hide-blog/sass/components/_banner.scss
+++ b/wp-content/themes/david-hide-blog/sass/components/_banner.scss
@@ -7,7 +7,8 @@
   );
   color: $color-white;
   font-size: 2.4rem;
-  min-height: 25vh;
+  height: 25vh;
+  min-height: 200px;
   position: relative;
   text-align: center;
 
