--- a/wp-content/themes/david-hide-blog/sass/components/_post.scss
+++ b/wp-content/themes/david-hide-blog/sass/components/_post.scss
@@ -29,6 +29,7 @@
   &__link {
     display: block;
     text-decoration: none;
+    color: inherit;
 
     &:hover > .post__thumbnail {
       opacity: 0.9;
